tests/requests/invalid/004.py
from gunicorn.http.errors import InvalidHTTPVersion
request = InvalidHTTPVersion